--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <div class="card">
-    <img src="./images/image-qr-code.png" />
-    <div class="text">
-      <h3>Improve your front-end skills by building projects</h3>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  <div class="main">
+    <div class="card">
+      <img src="./images/image-qr-code.png" />
+      <div class="text">
+        <h3 class="card-header">Improve your front-end skills by building projects</h3>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
     </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Paul G</a>.
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Paul G</a>.
+    </div>
   </div>
 </body>
 </html>
