--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="main">
     <div class="card">
-      <img src="./images/image-qr-code.png" />
+      <img src="./images/image-qr-code.png" alt="QR tag." />
       <div class="text">
         <h3 class="card-header">Improve your front-end skills by building projects</h3>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
